force-app/main/default/objects/Review_Transaction_Processing_Prefix__mdt/Review_Transaction_Processing_Prefix__mdt.object-meta.xml
<CustomObject>
    <label>Review Transaction Processing Prefix</label>
    <pluralLabel>Review Transaction Processing Prefixes</pluralLabel>
</CustomObject>