force-app/main/default/objects/Review_Transaction_Processing_Prefix__mdt/fields/Custom_RTv2_Handler__c.field-meta.xml
<CustomField>
    <fullName>Custom_RTv2_Handler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom RTv2 Handler</label>
    <type>Checkbox</type>
</CustomField>