force-app/main/default/objects/Review_Transaction_Processing_Prefix__mdt/fields/Custom_RTv2_Override__c.field-meta.xml
<CustomField>
    <fullName>Custom_RTv2_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom RTv2 Override</label>
    <type>Checkbox</type>
</CustomField>