force-app/main/default/objects/Review_Transaction_Processing_Prefix__mdt/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>